package ar.edu.uba.fi;

public interface MedioPago {

    Entreda crear(int gasto, Tipo tipo);
}
