package ar.edu.uba.fi;

public class TipoA extends Tipo {
    public TipoA() {

        super( 600, new PertenenciaH(), new Gold());
    }
}
