package ar.edu.uba.fi;

public class TipoB extends Tipo {
    public TipoB() {

        super( 5000, new PertenenciaH(), new Gold());
    }
}
