@startuml
class Agencia {

    + Agencia()
    + List<Entrada> comprar(List<Pedido>)

    - List<Entrada> filtrarEntradasNulas( List<Entrada> )
}

class Pedido {
    - cantidad;

    + List<Entrada> completar(ArrayList<Tipo> disponibilidad)
}
class Tipo {
    - precio

    + Tipo( precio, List<MedioPago>)
    + Entrada obtenerEntradaPara(Tipo tipo, MedioPago medioPago)
    + boolean equals(Object)

    - boolean soporta(medioPago)
}

class TipoA {

    + TipoA()
}

class TipoB {

    + TipoB()
}

interface MedioPago {
    Entrada crear(int gasto, Tipo tipo);
}

class Gold {

    + boolean equals(Object other)
    + Entrada crear(int gasto, Tipo tipo)

}

class PertenenciaH {

    + boolean equals(Object other)
    + Entrada crear(int gasto, Tipo tipo)

}
Agencia *- Tipo: "disponibilidad"
Agencia ..> Pedido

TipoA ---|> Tipo
TipoB ---|> Tipo

Tipo o-- "*" MedioPago

MedioPago <|-- PertenenciaH
MedioPago <|-- Gold

Pedido o- Tipo
Pedido o- MedioPago
@enduml